# CppTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: README.md
docs/: README.md
examples/: README.md
extras/: README.md
src/: README.md  main.cpp
src/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.hpp
tests/: README.md
tools/: README.md
